# Round5-Engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  callgrind.out.12579  cert.pem  cert_util.c  cert_util.h  cmake_install.cmake  data.txt  dil.pem  dilithium.pem  domain.key  dump.c  engine  engine_check  engine_check.c  engine_check.cc  install_manifest.txt  key.pem  keypair.c  keypair.h  old_engine.c  old_keypair.h  old_openssl.cnf  openssl.cnf  ran.sh  round5_engine.c  run.sh  run_engine.sh  run_tls  server.key  test_engine  test_network  test_run.sh  test_tls  tls.txt
Round5/configurable/: Doxyfile
Round5/configurable/doc/: a__fixed_8c.html  a__fixed_8c__incl.map  a__fixed_8c__incl.md5  a__fixed_8h.html  a__fixed_8h__dep__incl.md5  a__fixed_8h__incl.map  a__fixed_8h__incl.md5  a__fixed_8h_source.html  a__random_8c.html  a__random_8c__incl.map  a__random_8c__incl.md5  a__random_8h.html  a__random_8h__dep__incl.md5  a__random_8h__incl.md5  a__random_8h_source.html  annotated.html  cca__encrypt_8c.html  cca__encrypt_8c__incl.md5  cca__encrypt_8h.html  cca__encrypt_8h__dep__incl.md5  cca__encrypt_8h__incl.map  cca__encrypt_8h_source.html  classes.html  cpa__kem_8c.html  cpa__kem_8c__incl.md5  cpa__kem_8h.html  cpa__kem_8h__incl.md5  cpa__kem_8h_source.html  create_afixed_8c.html  create_afixed_8c__incl.md5  dir_6e38f8ebfbf81885b2960a023099325a.html  dir_a2f2002add987e269fffac77984b5ad9.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  drbg_8c.html  drbg_8c__incl.map  drbg_8c__incl.md5  drbg_8h.html  drbg_8h__dep__incl.map  drbg_8h__incl.map  drbg_8h_source.html  (+140 more)
Round5/configurable/doc/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_c.js  files_0.js  files_2.js  files_4.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  (+18 more)
Round5/optimized/: Makefile
Round5/optimized/src/createAfixed/: createAfixed.c
Round5/optimized/src/examples/: example.c
Round5/reference/: Makefile
Round5/reference/api/: test.c
Round5/reference/doc/: a__fixed_8c.html  a__fixed_8c__incl.map  a__fixed_8c__incl.md5  a__fixed_8h.html  a__fixed_8h__dep__incl.map  a__fixed_8h_source.html  a__random_8c.html  a__random_8h.html  a__random_8h__dep__incl.map  a__random_8h__incl.map  a__random_8h_source.html  annotated.html  cca__encrypt_8c.html  cca__encrypt_8c__incl.map  cca__encrypt_8h.html  cca__encrypt_8h__dep__incl.map  cca__encrypt_8h__incl.md5  cca__encrypt_8h_source.html  classes.html  cpa__kem_8c.html  cpa__kem_8c__incl.map  cpa__kem_8h.html  cpa__kem_8h__dep__incl.map  cpa__kem_8h__dep__incl.md5  cpa__kem_8h__incl.map  cpa__kem_8h_source.html  create_afixed_8c.html  create_afixed_8c__incl.map  dir_6e38f8ebfbf81885b2960a023099325a.html  dir_a2f2002add987e269fffac77984b5ad9.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  drbg_8c.html  drbg_8c__incl.map  drbg_8c__incl.md5  drbg_8h.html  drbg_8h__dep__incl.md5  drbg_8h__incl.md5  drbg_8h_source.html  example_8c.html  files.html  (+144 more)
Round5/reference/doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_a.js  all_b.js  all_e.js  classes_0.js  classes_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_1.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  searchdata.js  typedefs_1.js  variables_11.js  (+6 more)
Round5/reference/src/: r5_cpa_pke.c
Round5/reference/src/examples/: engine_check.c  example.c
certificate/: cert.pem  certificate  certificate.c  key.pem
certs/: cacert.pem  cert.pem  privkey.pem
dilithium/avx2/: PQCgenKAT_sign
dilithium/avx2/test/: speed.c  speed.h  test_dilithium  test_vectors
dilithium/ref/: PQCgenKAT_sign  sign.c
dilithium/ref/test/: test_dilithium  test_vectors
install/: run.sh  test_rubens.sh
liboqs/src/: oqsconfig.h
liboqs/src/kem/: Makefile  kem.c  kem.h
liboqs/src/kem/round5/: kem_round5.c  kem_round5.h
liboqs/usr_local/include/oqs/: oqsconfig.h
meths/: .asn1_meth.c.swp  asn1_meth.c  asn1_meth.h  dilithium_meth.backup  dilithium_meth.c  dilithium_meth.h  round5_md.c  round5_md.h  round5_meth.c  round5_meth.h
meths/scratch/: optimized_meths.c
network/: Makefile  server.c
network/linux/: client  client.c  client.h  server  server.c  server.h
network/windows/: client.c
openssl/apps/: round5.c
openssl/include/openssl/: round5.h
optimized/: Makefile
ossl/: objects.c  objects.h  objects_internal.h  ossl_compat.c  ossl_compat.h
reference/: Makefile
reference/api/: test.c
reference/src/examples/: round5_engine.c
speedtest/: speed.c  speed.h
test/: engine_check.c  test  test.py  test_network.c  test_tls.c  tls_test.c
test/certificate/: certificate  certificate.c  key.pem
